adding functionalities and refactoring the code